[package]
name = "poly-commit-airdrop-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
serde_json = "1.0.108"
csv = { version = "1.3.0", features = [] }
ethers = "2.0.11"
hex = "0.4.3"
ark-poly = "0.4.2"
ark-poly-commit = "0.4.0"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"